--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ header{
     position: relative;
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-size: cover;
 }
 .banner_wrapper:before {
@@ -181,18 +181,52 @@ header{
     width: 1280px;
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
 }
 .sales-card{
+    display: flex;
+    /*justify-content: flex-start;*/
     width: 50%;
-    /*height: 335px;*/
-
+    height: 335px;
+    color: white;
     background-repeat: no-repeat;
     background-position: center;
     /*background-attachment: fixed;*/
     background-size: cover;
     flex-direction: column;
     position: relative;
+
 }
+.sales-card .logo{
+    width: 155px;
+    height: 47px;
+    position: absolute;
+    top: 40px;
+    left: 70px;
+}
+.sales-card .red-tape img{
+    width: 244px;
+    height: 100px;
+    position: absolute;
+    top: 120px;
+    left: 40px;
+}
+.sales-card-discount{
+    position: absolute;
+    top: 120px;
+    left: 80px;
+    font-size: 2.6rem;
+    letter-spacing: 2.5px;
+}
+.sales-card-title{
+    text-align: left;
+    width: 50%;
+    position: absolute;
+    position: absolute;
+    top: 90px;
+    left: 70px;
+}
+
 .sales-card-button {
     position: absolute;
     bottom: 60px;
@@ -209,19 +243,38 @@ header{
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    /*height: 600px;*/
 }
 .left-sidebar-text{
     width: 45%;
     text-align: left;
     font-size: 1.2rem;
 }
-.right-sidebar-images{
-    width: 45%;
-}
+
 .profile-description{
     font-size: 1.2rem;
 }
+.advantages-wrapper{
+    width: 50%;
+    margin-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.advantage-item{
+    width: 45%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.advantage-item img{
+    width: 80px;
+    height: 80px;
+}
+.advantages-wrapper p{
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+
 
 .profile-systems-wrapper{
     width: 1200px;
@@ -231,6 +284,7 @@ header{
     margin-top: 100px;
     justify-content: center;
     align-items: center;
+    transition: 1s;
 }
 .profile-systems-title{
     font-size: 2rem;
@@ -249,6 +303,7 @@ header{
     padding-top: 15px;
     padding-bottom: 15px;
     border-bottom: 1.5px solid #1C70EE;
+    cursor: pointer;
 }
 
 .profile-button{
@@ -260,7 +315,45 @@ header{
     color: white;
     font-size: .9rem;
 }
+.profile-card{
+    width: 1000px;
+    display: none;
+    justify-content: space-between;
+    margin-top: 60px;
+    min-height: 350px;
+    align-items: center;
 
+}
+.profile-wrapper{
+    width: 32%;
+    height: 100%;
+}
+.profile-image{
+    width: 250px;
+    height: 300px;
+}
+.profile-info{
+    width: 65%;
+}
+.profile-name{
+    font-size: 1.2rem;
+    font-weight: bold;
+
+}
+.profile-logos img:hover{
+    opacity: 1;
+}
+.passive-logo{
+    opacity: .35    ;
+}
+.active-logo{
+    opacity: 1;
+}
+
+
+
+
+/* DIMAAA */
 .feedback{
     width: 100%;
     margin-top: 125px;
