--- a/css/style.css
+++ b/css/style.css
@@ -695,3 +695,78 @@ footer{
 .card-portfolio img{
     max-width: 625px;
 }
+
+.popup{
+    z-index: 10;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.popup:target{
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup-body{
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+}
+
+.popup__content{
+    background-color: #FFFFFF;
+    color: #1A1818;
+    max-width: 567px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
+.popup-sup-title{
+    margin-top: 34px;
+    font-family: IBM Plex Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 21px;
+    text-align: center;
+    color: #C8C8C8;
+}
+
+form input{
+    margin: 0px auto;
+    width: 445px;
+    height: 25px;
+    padding: 18px 0px 17px 22px;
+    margin-bottom: 20px;
+    border: 1px solid #E5E5E5;
+}
+
+form{
+    text-align: center;
+}
+
+.popup-close{
+    position: absolute;
+    right: 35px;
+    top: 35px;
+}
+
+.free-calculate-form-button{
+    width: 471px;
+    height: 53px;
+    background-color: #1C70EE;
+    color: #FFFFFF;
+    padding: 16px 155px 17px 155px;
+    font-size: 15px;
+    cursor: pointer;
+}
