--- a/css/style.css
+++ b/css/style.css
@@ -1044,6 +1044,8 @@ footer{
     left: 0;
     opacity: 0;
     visibility: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .popup:target{
@@ -1119,7 +1121,11 @@ form{
 }
 
 .card-portfolio{
-    width: 800px;
+    width: 585px;
+}
+
+.card-portfolio img{
+    width: 585px;
 }
 
 .city{
