--- a/css/style.css
+++ b/css/style.css
@@ -339,6 +339,118 @@ header{
 
 
 /* DIMAAA */
+
+
+.popup{
+    z-index: 10;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.popup:target{
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup-body{
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+}
+
+.popup__content{
+    background-color: #FFFFFF;
+    color: #1A1818;
+    max-width: 567px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
+.popup-sup-title{
+    margin-top: 34px;
+    font-family: IBM Plex Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 21px;
+    text-align: center;
+    color: #C8C8C8;
+}
+
+form input{
+    margin: 0px auto;
+    width: 445px;
+    height: 25px;
+    padding: 18px 0px 17px 22px;
+    margin-bottom: 20px;
+    border: 1px solid #E5E5E5;
+}
+
+form{
+    text-align: center;
+}
+
+.popup-close{
+    position: absolute;
+    right: 35px;
+    top: 35px;
+}
+
+.free-calculate-form-button{
+    width: 471px;
+    height: 53px;
+    background-color: #1C70EE;
+    color: #FFFFFF;
+    padding: 16px 155px 17px 155px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.wrapper-slider{
+    display: flex;
+    margin-top: 70px;
+}
+
+.card-portfolio:nth-child(2n){
+    margin-left: 15px;
+}
+
+.card-portfolio{
+    width: 585px;
+}
+
+.card-portfolio img{
+    width: 100%;
+}
+
+.city{
+    font-family: IBM Plex Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    color: #C9C9C9;
+}
+
+.project-name{
+    font-family: IBM Plex Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 21px;
+    color: #1A1818;
+}
+
 .feedback{
     width: 100%;
     margin-top: 125px;
@@ -724,7 +836,104 @@ footer{
         margin-top: 50px;
     }
 }
+
+@media (max-width: 1440px) {
+    .wrapper-portfolio {
+        max-width: 1024px;
+    }
+
+    .card-portfolio {
+        width: 500px;
+    }
+
+    .wrapper-slider {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .wrapper-feedback {
+        max-width: 1024px;
+    }
+
+    .info-describe {
+        width: 270px;
+        display: flex;
+        flex-direction: column;
+        padding: 45px 50px 40px 50px;
+    }
+
+    .header-name {
+        font-size: 25px;
+    }
+
+    .header-name {
+        font-size: 25px;
+    }
+
+    .wrapper-certification {
+        max-width: 1024px;
+        margin: 0px auto;
+    }
+
+    .image-certification {
+        width: 100%;
+        height: 340px;
+    }
+
+    .certification-cards .card{
+        width: 23%;
+    }
+
+    .comments-wrapper-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .wrapper-comment {
+        max-width: 1024px;
+        margin: 0px auto;
+    }
+
+    .comment-text {
+        padding: 20px 1px 21px 27px;
+    }
+
+    .comment-text {
+        width: 80%;
+        height: 129px;
+        font-size: 19px;
+    }
+
+    .comments-wrapper-card .card{
+        margin: 0px auto;
+    }
+
+}
+
 @media (max-width: 1024px) {
+
+    .privacy-footer {
+        padding-left: 10px;
+    }
+
+    .info-describe {
+        width: 290px;
+        padding: 55px 25px 20px 20px;
+    }
+
+    .certification-cards .card {
+        width: 35%;
+    }
+
+    .certification-cards {
+        flex-wrap: wrap;
+    }
+
+    .team {
+        display: none;
+    }
+
     .header-container{
         width: 95%;
         font-size: 1rem;
@@ -830,6 +1039,50 @@ footer{
     }
 }
 @media (max-width: 768px) {
+
+    .wrapper-slider {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 70px;
+    }
+
+    .card-portfolio:nth-child(2n) {
+        margin-left: 0px;
+    }
+
+    .feedback-info {
+        padding: 15px 15px 8px 17px;
+    }
+
+    .info-describe{
+        display: none;
+    }
+
+    .feedback-info {
+        padding: 20px 15px 8px 17px;
+    }
+
+    .comment-text-wrapper {
+        width: 350px;
+        height: 315px;
+    }
+
+    .certification-cards .card {
+        width: 55%;
+    }
+
+    .image-certification {
+        height: 300px;
+    }
+
+    .privacy-footer{
+        display: none;
+    }
+
+    .made-by {
+        padding-left: 10px;
+    }
+
     .header-container nav{
         display: none;
     }
@@ -933,8 +1186,44 @@ footer{
         font-size: .75rem;
     }
 
+    .popup__content {
+        max-width: 425px;
+        z-index: 100;
+
+    }
+
+    form input {
+        width: 370px;
+        height: 25px;
+    }
+
+    .free-calculate-form-button {
+        width: 393px;
+        height: 53px;
+        padding: 0px;
+        font-size: 13px;
+        border: 0px;
+    }
+
 }
 @media (max-width: 425px) {
+
+    .popup__content {
+        max-width: 300px;
+    }
+
+    .comment-text-wrapper {
+        width: 300px;
+        height: 400px;
+    }
+
+    form input {
+        width: 280px;
+    }
+
+    .free-calculate-form-button {
+        width: 305px;
+    }
 
     .text-info{
         width: 310px;
@@ -1032,114 +1321,4 @@ footer{
         font-size: .75rem;
     }
 
-}
-
-.popup{
-    z-index: 10;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    top: 0;
-    left: 0;
-    opacity: 0;
-    visibility: hidden;
-    overflow-x: hidden;
-    overflow-y: auto;
-}
-
-.popup:target{
-    opacity: 1;
-    visibility: visible;
-}
-
-.popup-body{
-    min-height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 30px 10px;
-}
-
-.popup__content{
-    background-color: #FFFFFF;
-    color: #1A1818;
-    max-width: 567px;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
-}
-
-.popup-sup-title{
-    margin-top: 34px;
-    font-family: IBM Plex Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 21px;
-    text-align: center;
-    color: #C8C8C8;
-}
-
-form input{
-    margin: 0px auto;
-    width: 445px;
-    height: 25px;
-    padding: 18px 0px 17px 22px;
-    margin-bottom: 20px;
-    border: 1px solid #E5E5E5;
-}
-
-form{
-    text-align: center;
-}
-
-.popup-close{
-    position: absolute;
-    right: 35px;
-    top: 35px;
-}
-
-.free-calculate-form-button{
-    width: 471px;
-    height: 53px;
-    background-color: #1C70EE;
-    color: #FFFFFF;
-    padding: 16px 155px 17px 155px;
-    font-size: 15px;
-    cursor: pointer;
-}
-
-.wrapper-slider{
-    display: flex;
-    margin-top: 70px;
-}
-
-.card-portfolio:nth-child(2n){
-    margin-left: 15px;
-}
-
-.card-portfolio{
-    width: 585px;
-}
-
-.card-portfolio img{
-    width: 585px;
-}
-
-.city{
-    font-family: IBM Plex Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    color: #C9C9C9;
-}
-
-.project-name{
-    font-family: IBM Plex Sans;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 21px;
-    color: #1A1818;
 }
