--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,7 @@ form{
     text-transform: uppercase;
     margin-top: 0px;
     margin-bottom: 0px;
+    color: white;
     margin-top: 7px;
     cursor: pointer;
 }
